--- a/index.html
+++ b/index.html
@@ -133,6 +133,169 @@
 		</div>
 	</section>
 
+	<section class="mentors">
+		<div class="container">
+			<div class="mentors__header">
+				<h2 class="mentors__title title">ТОП МЕНТОРІВ / РЕПЕТИТОРІВ</h2>
+				<a href="#" class="title__more">Всі ментори<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+			</div>
+			<div class="mentors__wrapper">
+				<div class="mentors__card">
+					<div>
+						<img  src="icons/mentor.png" alt="Mentor">
+					</div>
+					<div class="mentors__blockstars">
+						<i class="mentors__star fa-solid fa-star"></i>
+						<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+					</div>
+					<h3 class="mentors__card-title">Им’я Прізвище</h3>
+					<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					<div class="mentors__card-course">
+						Курс:
+						<span>Назва курсу</span>
+					</div>
+					<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+				</div>
+				<div class="mentors__card">
+					<div>
+						<img  src="icons/mentor.png" alt="Mentor">
+					</div>
+					<div class="mentors__blockstars">
+						<i class="mentors__star fa-solid fa-star"></i>
+						<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+					</div>
+					<h3 class="mentors__card-title">Им’я Прізвище</h3>
+					<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					<div class="mentors__card-course">
+						Курс:
+						<span>Назва курсу</span>
+					</div>
+					<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+				</div>
+				<div class="mentors__card">
+					<div>
+						<img  src="icons/mentor.png" alt="Mentor">
+					</div>
+					<div class="mentors__blockstars">
+						<i class="mentors__star fa-solid fa-star"></i>
+						<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+					</div>
+					<h3 class="mentors__card-title">Им’я Прізвище</h3>
+					<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					<div class="mentors__card-course">
+						Курс:
+						<span>Назва курсу</span>
+					</div>
+					<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+				</div>
+				<div class="mentors__card">
+					<div>
+						<img  src="icons/mentor.png" alt="Mentor">
+					</div>
+					<div class="mentors__blockstars">
+						<i class="mentors__star fa-solid fa-star"></i>
+						<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+					</div>
+					<h3 class="mentors__card-title">Им’я Прізвище</h3>
+					<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					<div class="mentors__card-course">
+						Курс:
+						<span>Назва курсу</span>
+					</div>
+					<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+				</div>
+				<div class="mentors__card">
+					<div>
+						<img  src="icons/mentor.png" alt="Mentor">
+					</div>
+					<div class="mentors__blockstars">
+						<i class="mentors__star fa-solid fa-star"></i>
+						<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+					</div>
+					<h3 class="mentors__card-title">Им’я Прізвище</h3>
+					<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					<div class="mentors__card-course">
+						Курс:
+						<span>Назва курсу</span>
+					</div>
+					<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+				</div>
+				<div class="mentors__card">
+					<div>
+						<img  src="icons/mentor.png" alt="Mentor">
+					</div>
+					<div class="mentors__blockstars">
+						<i class="mentors__star fa-solid fa-star"></i>
+						<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+					</div>
+					<h3 class="mentors__card-title">Им’я Прізвище</h3>
+					<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					<div class="mentors__card-course">
+						Курс:
+						<span>Назва курсу</span>
+					</div>
+					<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+				</div>
+				<div class="mentors__card">
+					<div>
+						<img  src="icons/mentor.png" alt="Mentor">
+					</div>
+					<div class="mentors__blockstars">
+						<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+						<i class="mentors__star fa-solid fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+						<i class="mentors__star fa-regular fa-star"></i>
+					</div>
+					<h3 class="mentors__card-title">Им’я Прізвище</h3>
+					<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					<div class="mentors__card-course">
+						Курс:
+						<span>Назва курсу</span>
+					</div>
+					<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+				</div>
+				<div class="mentors__card mentors__invite-card">
+					<img src="icons/plus.png" alt="">
+					<div class="mentors__invite-text">
+						Стати ментором
+					</div>
+				</div>
+			</div>
+			<div class="mentors__wrapper-btn button_main">
+				<button data-ripple data-modal="consultation" class="button">
+					Записатись на пробне заняття
+					<span class="ripple"></span>
+				</button>
+			</div>
+		</div>
+	</section>
+
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
 	<script src="js/jquery.validate.min.js"></script>
