Block header modified. Created a burger menu with native JS without JQuery.Chan

--- a/index.html
+++ b/index.html
@@ -6,77 +6,57 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>N-code</title>
 		<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-		<link rel="stylesheet" href="https://kit.fontawesome.com/53722d01cf.css" crossorigin="anonymous">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header id="up" class="promo header__promo">
 		<div class="container">
-
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<div class="navbar-logo">
-					<a href="#" class="header__logo">
-						<img class="header__logo-img" src="icons/Vector.png" alt="logo">
-					</a>
-				</div>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<div class="nav-item header__contacts">
-						<a href="tel:+3806700000000" class="header__phone">+306700000000</a>
-						<a class="nav-link dropdown-toggle header__logo-flag" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-							<img class="header__logo-flag-icon" src="icons/Ukraine.png" alt="flag">
-						</a>
-					</div>
-				</div>
-			</nav>
-
-				
-
-			<div class="promo__wrapper">
-				<div class="promo__wrapper-bg">
-					<img class="promo__wrapper-img" src="img/bg.jpg" alt="timer">
-				</div>
-				<div class="promo__wrapper-btn button_main">
-					<button data-ripple data-modal="consultation" class="button">
-						Отримати консультацію менеджера
-						<span class="ripple"></span>
-					</button>
-				</div>
-			</div>
-
-			<div class="header__wrapper">
-				<div class="container">
-					<div class="header__wrapper__body">
-						<a href="" class="header__wrapper__logo"><img src="./icons/Vector.png" alt=""></a>
-						<div class="header__wrapper__burger">
-							<span></span>
-						</div>
-						<nav class="header__wrapper__menu">
-							<div class="header__wrapper__contacts">
-								<a href="tel:+3806700000000" class="header__phone">+306700000000</a>
-								<a class="nav-link dropdown-toggle header__logo-flag" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-									<img class="header__logo-flag-icon" src="icons/Ukraine.png" alt="flag">
-								</a>
+				<div class="header__wrapper">
+					<div class="container">
+						<div class="header__wrapper__body">
+							<a href="" class="header__wrapper__logo"><img src="./icons/logo.png" alt=""></a>
+							<div class="header__wrapper__burger">
+								<span></span>
 							</div>
-							<ul class="header__wrapper__list">
-								<li><a href="" class="header__wrapper__link">ПРО&nbsp;НАС</a></li>
-								<li><a href="" class="header__wrapper__link">МЕНТОРИ</a></li>
-								<li><a href="" class="header__wrapper__link">ВІДГУКИ</a></li>
-								<li><a href="" class="header__wrapper__link"><nobr>ПОДАРУВАТИ СЕРТИФІКАТ</nobr></a></li>
-								<li><a href="" class="header__wrapper__link">КОНТАКТИ</a></li>
-								<li><a href="" class="header__wrapper__link">КАБІНЕТ</a></li>
-							</ul>
-						</nav>
+							<nav class="header__wrapper__menu">
+								<div class="header__wrapper__contacts">
+									<a href="tel:+3806700000000" class="header__phone">+306700000000</a>
+									<a class="nav-link dropdown-toggle header__logo-flag" href="#">
+										<img class="header__logo-flag-icon" src="icons/Ukraine.png" alt="flag">
+									</a>
+								</div>
+								<ul class="header__wrapper__list">
+									<li><a href="" class="header__wrapper__link">ПРО&nbsp;НАС</a></li>
+									<li><a href="" class="header__wrapper__link">МЕНТОРИ</a></li>
+									<li><a href="" class="header__wrapper__link">ВІДГУКИ</a></li>
+									<li><a href="" class="header__wrapper__link">ПОДАРУВАТИ СЕРТИФІКАТ</a></li>
+									<li><a href="" class="header__wrapper__link">КОНТАКТИ</a></li>
+									<li><a href="" class="header__wrapper__link">КАБІНЕТ</a></li>
+								</ul>
+							</nav>
+						</div>
 					</div>
 				</div>
-			</div>	
+
+				<div class="promo__wrapper">
+					<div class="promo__wrapper-bg">
+						<img class="promo__wrapper-img" src="img/bg.jpg" alt="N-Code">
+					</div>
+					<div class="promo__wrapper-btn button_main">
+						<button data-ripple data-modal="consultation" class="button">
+							Отримати консультацію менеджера
+							<span class="ripple"></span>
+						</button>
+					</div>
+				</div>
 		</div>
 	</header>
 
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+	<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
 	<script src="js/jquery.validate.min.js"></script>
-	<script src="js/jquery.maskedinput.min.js"></script>
+	<script src="js/jquery.maskedinput.min.js"></script> -->
 	<script src="js/burger.js"></script>
 </body>
 </html>
