Edit max-width again to 1024 px. Add nbsp;. Add path for page site blocks

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 									</a>
 								</div>
 								<ul class="header__wrapper__list">
-									<li><a href="" class="header__wrapper__link">ПРО&nbsp;НАС</a></li>
-									<li><a href="" class="header__wrapper__link">МЕНТОРИ</a></li>
-									<li><a href="" class="header__wrapper__link">ВІДГУКИ</a></li>
-									<li><a href="" class="header__wrapper__link">ПОДАРУВАТИ СЕРТИФІКАТ</a></li>
-									<li><a href="" class="header__wrapper__link">КОНТАКТИ</a></li>
-									<li><a href="" class="header__wrapper__link">КАБІНЕТ</a></li>
+									<li><a href="#advanteges" class="header__wrapper__link">ПРО&nbsp;НАС</a></li>
+									<li><a href="#mentots" class="header__wrapper__link">МЕНТОРИ</a></li>
+									<li><a href="#review" class="header__wrapper__link">ВІДГУКИ</a></li>
+									<li><a href="№sertificats" class="header__wrapper__link">ПОДАРУВАТИ&nbsp;СЕРТИФІКАТ</a></li>
+									<li><a href="#contacts" class="header__wrapper__link">КОНТАКТИ</a></li>
+									<li><a href="#cabinet" class="header__wrapper__link">КАБІНЕТ</a></li>
 								</ul>
 							</nav>
 						</div>
