--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 									</a>
 								</div>
 								<ul class="header__wrapper__list">
-									<li><a href="#advanteges" class="header__wrapper__link">ПРО&nbsp;НАС</a></li>
-									<li><a href="#mentots" class="header__wrapper__link">МЕНТОРИ</a></li>
+									<li><a href="#advantages" class="header__wrapper__link">ПРО&nbsp;НАС</a></li>
+									<li><a href="#mentors" class="header__wrapper__link">МЕНТОРИ</a></li>
 									<li><a href="#review" class="header__wrapper__link">ВІДГУКИ</a></li>
-									<li><a href="№sertificats" class="header__wrapper__link">ПОДАРУВАТИ&nbsp;СЕРТИФІКАТ</a></li>
+									<li><a href="#certificates" class="header__wrapper__link">ПОДАРУВАТИ&nbsp;СЕРТИФІКАТ</a></li>
 									<li><a href="#contacts" class="header__wrapper__link">КОНТАКТИ</a></li>
 									<li><a href="#cabinet" class="header__wrapper__link">КАБІНЕТ</a></li>
 								</ul>
