--- a/index.html
+++ b/index.html
@@ -52,6 +52,68 @@
 		</div>
 	</header>
 
+	
+	<section id="advanteges" class="advantages">
+		<div class="container">
+				<h2 class="advantages__title title">НАШІ ПЕРЕВАГИ</h2>
+				<div class="advantages__wrapper">
+					<div class="advantages__item">
+						<div class="advantages__descr">
+							Наші викладачі мають досвід в IT від 5 років
+						</div>
+						<span>01</span>
+					</div>
+						<div class="advantages__item">
+							<div class="advantages__descr">
+								Кожен студент <br>має персонального менеджера 
+							</div>
+							<span>02</span>         
+						</div>
+						<div class="advantages__item">
+								<div class="advantages__descr">
+									Зручна форма оплати
+								</div>
+								<span>03</span> 
+						</div>
+						<div class="advantages__item">
+								<div class="advantages__descr">
+									Підключення до чат-боту
+									з англійської для розробників
+								</div>
+								<span>04</span> 
+						</div>
+						<div class="advantages__item">
+								<div class="advantages__descr">
+									Гнучкий графік занять
+								</div>
+								<span>05</span> 
+						</div>
+						<div class="advantages__item">
+								<div class="advantages__descr">
+									Допомагаємо підготувати резюме
+									та підготуватись до співбесіди
+								</div>
+								<span>06</span>        
+						</div>
+						<div class="advantages__item">
+								<div class="advantages__descr">
+									Найкращих студентів
+									працевлаштовуємо
+								</div>
+								<span>07</span> 
+						</div>
+						<div class="advantages__item">
+								<div class="advantages__descr">
+									Сертифікат\рекомендації в залежності
+									від отриманих компетенцій
+								</div>
+								<span>08</span> 
+						</div>
+				</div>
+		</div>
+	</section>
+
+
 	<script src="js/burger.js"></script>
 </body>
 </html>
