Modify advantages. MB-0 deleted. FS-22px. FW-400. Orered box

--- a/index.html
+++ b/index.html
@@ -57,58 +57,58 @@
 		<div class="container">
 				<h2 class="advantages__title title">НАШІ ПЕРЕВАГИ</h2>
 				<div class="advantages__wrapper">
-					<div class="advantages__item">
+					<div class="advantages__item item-1">
 						<div class="advantages__descr">
-							Наші викладачі мають досвід в IT від 5 років
+							Наші викладачі мають</br>досвід в IT від 5 років
 						</div>
 						<span>01</span>
 					</div>
-						<div class="advantages__item">
-							<div class="advantages__descr">
-								Кожен студент <br>має персонального менеджера 
-							</div>
-							<span>02</span>         
+					<div class="advantages__item item-5">
+						<div class="advantages__descr">
+							Гнучкий графік занять
 						</div>
-						<div class="advantages__item">
-								<div class="advantages__descr">
-									Зручна форма оплати
-								</div>
+						<span>05</span> 
+					</div>
+					<div class="advantages__item item-2">
+						<div class="advantages__descr">
+							Кожен студент <br>має персонального менеджера 
+						</div>
+						<span>02</span>         
+					</div>
+					<div class="advantages__item item-6">
+						<div class="advantages__descr">
+							Допомагаємо підготувати резюме
+							та підготуватись до співбесіди
+						</div>
+						<span>06</span>        
+					</div>
+					<div class="advantages__item item-3">
+						<div class="advantages__descr">
+							Зручна форма оплати
+						</div>
 								<span>03</span> 
+					</div>
+					<div class="advantages__item item-7">
+						<div class="advantages__descr">
+							Найкращих студентів
+							працевлаштовуємо
 						</div>
-						<div class="advantages__item">
-								<div class="advantages__descr">
-									Підключення до чат-боту
-									з англійської для розробників
-								</div>
-								<span>04</span> 
+						<span>07</span> 
+					</div>
+					<div class="advantages__item item-4">
+						<div class="advantages__descr">
+							Підключення до чат-боту
+							з англійської для розробників
 						</div>
-						<div class="advantages__item">
-								<div class="advantages__descr">
-									Гнучкий графік занять
-								</div>
-								<span>05</span> 
+						<span>04</span> 
+					</div>
+					<div class="advantages__item item-8">
+						<div class="advantages__descr">
+							Сертифікат\рекомендації в залежності
+							від отриманих компетенцій
 						</div>
-						<div class="advantages__item">
-								<div class="advantages__descr">
-									Допомагаємо підготувати резюме
-									та підготуватись до співбесіди
-								</div>
-								<span>06</span>        
-						</div>
-						<div class="advantages__item">
-								<div class="advantages__descr">
-									Найкращих студентів
-									працевлаштовуємо
-								</div>
-								<span>07</span> 
-						</div>
-						<div class="advantages__item">
-								<div class="advantages__descr">
-									Сертифікат\рекомендації в залежності
-									від отриманих компетенцій
-								</div>
-								<span>08</span> 
-						</div>
+						<span>08</span> 
+					</div>
 				</div>
 		</div>
 	</section>
