Create mentors block. Need Сorrections!!!

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>N-code</title>
 		<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+		<link rel="stylesheet" href="https://kit.fontawesome.com/53722d01cf.css" crossorigin="anonymous">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -52,6 +54,296 @@
 		</div>
 	</header>
 
+	
+	<section id="advanteges" class="advantages">
+		<div class="container">
+				<h2 class="advantages__title title">НАШІ ПЕРЕВАГИ</h2>
+				<div class="advantages__wrapper">
+					<div class="advantages__item">
+						<div class="advantages__descr">
+							Наші викладачі мають<br>досвід в IT від 5 років
+						</div>
+						<span>01</span>
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__descr">
+							Гнучкий графік занять
+						</div>
+						<span>05</span> 
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__descr">
+							Кожен студент <br>має персонального менеджера 
+						</div>
+						<span>02</span>         
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__descr">
+							Допомагаємо підготувати резюме
+							та підготуватись до співбесіди
+						</div>
+						<span>06</span>        
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__descr">
+							Зручна форма оплати
+						</div>
+								<span>03</span> 
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__descr">
+							Найкращих студентів
+							працевлаштовуємо
+						</div>
+						<span>07</span> 
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__descr">
+							Підключення до чат-боту
+							з англійської для розробників
+						</div>
+						<span>04</span> 
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__descr">
+							Сертифікат\рекомендації в залежності
+							від отриманих компетенцій
+						</div>
+						<span>08</span> 
+					</div>
+				</div>
+		</div>
+	</section>
+
+
+	<section id="mentots" class="mentors">
+		<div class="container">
+			<div class="mentors__header">
+				<h2 class="mentors__title title">ТОП МЕНТОРІВ / РЕПЕТИТОРІВ</h2>
+				<a href="#" class="title__more">Всі ментори<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+			</div>
+			<div class="mentors__wrapper">
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card mentors__invite-card">
+					<img src="icons/plus.png" alt="">
+					<div class="mentors__invite-text">
+						Стати ментором
+					</div>
+				</div>
+	
+			</div>
+			<div class="mentors__wrapper-btn button_main">
+				<button data-ripple data-modal="consultation" class="button">
+					Записатись на пробне заняття
+					<span class="ripple"></span>
+				</button>
+			</div>
+		</div>
+	</section>
+
+	<script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
 	<script src="js/burger.js"></script>
 </body>
 </html>
