Create block Mentors2

--- a/index.html
+++ b/index.html
@@ -113,6 +113,232 @@
 		</div>
 	</section>
 
+	<section id="mentots" class="mentors">
+		<div class="container">
+			<div class="mentors__header">
+				<h2 class="mentors__title title">ТОП МЕНТОРІВ / РЕПЕТИТОРІВ</h2>
+				<a href="#" class="title__more">Всі ментори<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+			</div>
+			<div class="mentors__wrapper">
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card">
+					<div class="card__box-top">
+						<div class="card__box-top-left">
+							<img  src="icons/mentor.png" alt="Mentor">
+						</div>
+						<div class="card__box-top-rigth">
+							<div class="mentors__blockstars">
+								<i class="mentors__star fa-solid fa-star"></i>
+								<!-- <img class="mentors__star" src="icons/star.png" alt="Stars"> -->
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+								<i class="mentors__star fa-regular fa-star"></i>
+							</div>
+							<h3 class="mentors__card-title">Им’я Прізвище</h3>	
+						</div>
+					</div>
+					<div class="card__box-midd">
+						<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
+					</div>
+					<div class="card__box-bottom">
+						<div class="mentors__card-course">
+							Курс:
+							<span>Назва курсу</span>
+						</div>
+						<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+					</div>
+				</div>
+	
+				<div class="mentors__card mentors__invite-card">
+					<img src="icons/plus.png" alt="">
+					<div class="mentors__invite-text">
+						Стати ментором
+					</div>
+				</div>
+			</div>
+			<div class="mentors__wrapper-btn button_main">
+				<button data-ripple data-modal="consultation" class="button">
+					Записатись на пробне заняття
+					<span class="ripple"></span>
+				</button>
+			</div>
+		</div>
+	</section>
+	
 
 	<script src="js/burger.js"></script>
 </body>
