Changed letter I to Eng. Comment url fotawesome in head of styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>N-code</title>
 	<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-	<link rel="stylesheet" href="https://kit.fontawesome.com/53722d01cf.css" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="https://kit.fontawesome.com/53722d01cf.css" crossorigin="anonymous"> -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -29,10 +29,10 @@
 								<ul class="header__wrapper__list">
 									<li><a href="#advantages" class="header__wrapper__link">ПРО&nbsp;НАС</a></li>
 									<li><a href="#mentors" class="header__wrapper__link">МЕНТОРИ</a></li>
-									<li><a href="#review" class="header__wrapper__link">ВІДГУКИ</a></li>
-									<li><a href="#certificates" class="header__wrapper__link">ПОДАРУВАТИ&nbsp;СЕРТИФІКАТ</a></li>
+									<li><a href="#review" class="header__wrapper__link">ВIДГУКИ</a></li>
+									<li><a href="#certificates" class="header__wrapper__link">ПОДАРУВАТИ&nbsp;СЕРТИФIКАТ</a></li>
 									<li><a href="#contacts" class="header__wrapper__link">КОНТАКТИ</a></li>
-									<li><a href="#cabinet" class="header__wrapper__link">КАБІНЕТ</a></li>
+									<li><a href="#cabinet" class="header__wrapper__link">КАБIНЕТ</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -56,7 +56,7 @@
 	
 	<section id="advanteges" class="advantages">
 		<div class="container">
-				<h2 class="advantages__title title">НАШІ ПЕРЕВАГИ</h2>
+				<h2 class="advantages__title title">НАШI ПЕРЕВАГИ</h2>
 				<div class="advantages__wrapper">
 					<div class="advantages__item">
 						<div class="advantages__descr">
