Create html structure of new  Study Block

--- a/index.html
+++ b/index.html
@@ -339,6 +339,87 @@
 			</div>
 		</div>
 	</section>
+
+	<section id="review" class="study">
+		<div class="container">
+			<div class="study__header">
+				<h2 class="title">Як проходить навчання</h2>
+			</div>
+			<div class="study__wrapper">
+				<div class="study__wrapper-left">
+					<div class="study__card">
+						<div class="study__card__icon">
+							<img src="icons/step1.png" alt="application">
+						</div>
+						<div class="study__card__text">
+							<div class="study__title">
+								Крок 1
+							</div>
+							<div class="study__subtitile">
+								Заповнити заявку
+							</div>
+						</div>
+					</div>
+					<div class="study__card">
+						<div class="study__card__icon">
+							<img src="icons/step2.png" alt="manager">
+						</div>
+						<div class="study__card__text">
+							<div class="study__title">
+								Крок 2
+							</div>
+							<div class="study__subtitile">
+								Зв’язок з менеджером
+							</div>
+						</div>
+					</div>
+					<div class="study__card">
+						<div class="study__card__icon">
+							<img src="icons/step3.png" alt="mentor">
+						</div>
+						<div class="study__card__text">
+							<div class="study__title">
+								Крок 3
+							</div>
+							<div class="study__subtitile">
+								Заняття з ментором
+							</div>
+						</div>
+					</div>
+					<div class="study__card">
+						<div class="study__card__icon">
+							<img src="icons/step4.png" alt="growth">
+						</div>
+						<div class="study__card__text">
+							<div class="study__title">
+								Крок 4
+							</div>
+							<div class="study__subtitile">
+								Швидкий ріст знань
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="study__wrapper-right study__position">
+					<ul>Зв’язок з менеджером: 
+						<li>Вибір ментора</li>
+						<li>бронювання часу</li>
+						<li>запис на тестування???</li>
+					</ul>
+					
+					<ul>Заняття з ментором: 
+						<li>	20% теорії, 80 % практики</li>
+						<li>	фідбеки від ментора</li>
+						<li>	допомога з підготовкою резюме і до співбесіди</li>
+					</ul>		
+			</div>
+			</div>
+	
+		</div>
+	</section>
+
+
+
 	
 	
 	<script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
