Midified  style for Study Block. Height left block elements. Adaptive

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 	<section id="review" class="study">
 		<div class="container">
 			<div class="study__header">
-				<h2 class="title">Як проходить навчання</h2>
+				<h2 class="title">ЯК СТАТИ КРУТИМ РОЗРОБНИКОМ?</h2>
 			</div>
 			<div class="study__wrapper">
 				<div class="study__wrapper-left">
@@ -408,11 +408,22 @@
 					</ul>
 					
 					<ul>Заняття з ментором: 
-						<li>	20% теорії, 80 % практики</li>
-						<li>	фідбеки від ментора</li>
-						<li>	допомога з підготовкою резюме і до співбесіди</li>
-					</ul>		
+						<li>20% теорії, 80 % практики</li>
+						<li>фідбеки від ментора</li>
+						<li>допомога з підготовкою резюме і до співбесіди</li>
+					</ul>	
+				</div>
 			</div>
+			<div class="study__wrapper-mobile">
+				<p>Більш детальна інформація про етап</p>
+				<div class="study__wrapper-btn button_main">
+					<button data-ripple data-modal="consultation" class="button">
+						Записатись на пробне заняття
+					</button>
+					<!-- <button data-ripple data-modal="consultation" class="button button-mobile">
+						Записатись на пробне заняття
+					</button> -->
+				</div>
 			</div>
 	
 		</div>
