Modify Block Study. Delele text-shadow. Add toggle to card. Delete comment

--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
 		</div>
 	</section>
 
+
 	<section id="review" class="study">
 		<div class="container">
 			<div class="study__header">
@@ -347,7 +348,7 @@
 			</div>
 			<div class="study__wrapper">
 				<div class="study__wrapper-left">
-					<div class="study__card">
+					<div class="study__card card-active">
 						<div class="study__card__icon">
 							<img src="icons/step1.png" alt="application">
 						</div>
@@ -420,12 +421,8 @@
 					<button data-ripple data-modal="consultation" class="button">
 						Записатись на пробне заняття
 					</button>
-					<!-- <button data-ripple data-modal="consultation" class="button button-mobile">
-						Записатись на пробне заняття
-					</button> -->
 				</div>
 			</div>
-	
 		</div>
 	</section>
 
