--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>N-code</title>
 	<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
 	<!-- <link rel="stylesheet" href="https://kit.fontawesome.com/53722d01cf.css" crossorigin="anonymous"> -->
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header id="up" class="promo header__promo">
